# TCP-Congestion-Controller-Visualiser

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/tcp_visualizer/: __init__.py  main.py
backend/src/tcp_visualizer/algorithms/: __init__.py  cubic.py  new_reno.py  phase.py  registry.py  reno.py  tahoe.py
backend/src/tcp_visualizer/api/: schemas.py
backend/src/tcp_visualizer/api/routes/: health.py  simulations.py
backend/src/tcp_visualizer/domain/: __init__.py  config.py  congestion_control.py  errors.py  events.py  link.py  node.py  packet.py  phase.py  result.py  signals.py
backend/src/tcp_visualizer/simulation/: __init__.py  engine.py
backend/src/tcp_visualizer/statistics/: __init__.py  collector.py
backend/tests/: conftest.py  support.py
backend/tests/algorithms/: test_cubic.py  test_new_reno.py  test_registry.py  test_reno.py  test_tahoe.py
backend/tests/api/: test_health.py  test_simulations.py
backend/tests/domain/: conftest.py  support.py  test_config.py  test_congestion_control.py  test_events.py  test_link.py  test_node.py  test_packet.py  test_result.py  test_signals.py
backend/tests/simulation/: conftest.py  test_architecture.py  test_engine.py  test_loss_classification.py  test_phase_reporting.py  test_sequence_tracking.py
backend/tests/statistics/: test_collector.py
docs/design/: DESIGN_SPEC.md
frontend/: .prettierrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+88 files in other folders)
